Fix: 이미지 업로드 기능 수정(미사용)